crates/keron-lang/tests/corpus/errors/check/reconcile_in_val_initializer.keron
val zero: Int = if true {
  reconcile [symlink(from = "a", to = "b")]
  0
} else {
  0
}
